Fixed beaker beak alignment

--- a/src/components/ReagentForm/ReagentForm.module.css
+++ b/src/components/ReagentForm/ReagentForm.module.css
@@ -28,7 +28,7 @@ input:focus, select:focus {
     border: .2rem double black;
     border-top: .2rem double black;;
     border-radius: .3rem .3rem 1rem 1rem;
-    width: 60%;
+    width: 18rem;
     padding: 1rem;
     position: relative;
     z-index: -1;
@@ -39,13 +39,13 @@ input:focus, select:focus {
 .beak {
     position: relative;
     left: -8.4rem;
-    top: -.4rem;
+    top: 0.1rem;
     background: transparent;
     border: .2rem double black;
     border-top: 1rem double transparent;
     border-right: 1rem double transparent;
     outline: none;
-    width: 3.3rem;
-    rotate: 60deg;
+    width: 4.3rem;
+    rotate: 70deg;
     z-index: -1;
 }
